[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-zelda-pygame"
version = "0.1.0"
description = "A ROM-free Zelda-like Gymnasium environment built on Pygame."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Henry LeCates" }]
dependencies = [
  "gymnasium>=0.29",
  "pygame>=2.5",
  "numpy>=1.24",
  "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gym_zelda_pygame*"]

[tool.setuptools.package-data]
"gym_zelda_pygame" = [
  "game/graphics/**/*",
  "game/audio/**/*",
  "game/map/*",
  "game/code/**/*.py",
]
